minor change to title line-height preventing cutoff

--- a/code/src/components/ah2019.sass
+++ b/code/src/components/ah2019.sass
@@ -47,7 +47,8 @@ body
       &-right
         position: relative
         margin-right: -0.3rem
-        line-height: 0.7
+        line-height: 0.74
+        overflow: visible
         display: flex
         flex-direction: row
         justify-content: flex-end
